--- a/IMC/IMC/app/src/main/res/values/strings.xml
+++ b/IMC/IMC/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">IMC</string>
+    <string name="title_activity_imcresultado">IMCResultado</string>
 </resources>
